--- a/web/ckeditor_new/ckeditor/ckeditor.html
+++ b/web/ckeditor_new/ckeditor/ckeditor.html
@@ -14,7 +14,8 @@
 	<br>
 	<h1 style="text-align:center; color:#00CC66"><i>news edit center</i></h1>
 	<br><br>
-	<form action="http://localhost:2999/1.php/test/test1.php" method="post"
+	<!--	http://localhost:2999/1.php/test/test1.php-->
+	<form action="http://localhost:8088/news_war_exploded/addnews" method="post"
 		  style="position:absolute; width:60%; left:20%; text-align:center">
 		<input name="news_h" placeholder=" 输入新闻标题 "
 			   style="width:99%;text-align:center;height:50px;border:1px solid white; border-radius:2px;"><br>
